--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: node_js
 node_js: '9.3.0'
-cache: yarn
+python: "3.5"
+cache: 
+  - yarn
+  - pip
 script: yarn build
-install: 
-  - pip install awscli
+install: pip install awscli
 deploy:
   - provider: s3
     access_key_id: AKIAJEO5J4JOGK2PP5BA
