--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
+sudo: required
+dist: trusty
 language: node_js
 node_js: '9.3.0'
-python: "3.6"
+python: "3.6.3"
 cache: 
-  - pip3
+  - pip
   - yarn
-install: pip3 install awscli
+install: pip install awscli
 script: yarn build
 deploy:
   - provider: s3
