--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python: "3.6.3"
 cache: 
   - pip
   - yarn
-install: pip install awscli
+install: sudo -H pip install awscli --upgrade --ignore-installed six
 script: yarn build
 deploy:
   - provider: s3
