--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ cache:
   - pip
   - yarn
 install: sudo -H pip install awscli --upgrade --ignore-installed six
+before_script: yarn
 script: yarn build
 deploy:
   - provider: s3
