--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
 install: sudo -H pip install awscli --upgrade --ignore-installed six
 before_script: 
   - yarn
-  - sudo ./scripts/aws_credentials.sh
+  - ./scripts/aws_credentials.sh
 script: yarn build
 deploy:
 - provider: s3
