--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ before_script:
 script: yarn build
 deploy:
 - provider: s3
-  access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>    
-  secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %> 
+  access_key_id: '${AWS_ACCESS_KEY_ID}'
+  secret_access_key: '${AWS_SECRET_ACCESS_KEY}'
   bucket: hobbithobby.com
   local-dir: build
   acl: public_read
@@ -22,8 +22,8 @@ deploy:
   on:
     repo: TranHung92/reactive-LED-controller
 - provider: s3
-  access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %> 
-  secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %> 
+  access_key_id: '${AWS_ACCESS_KEY_ID}'
+  secret_access_key: '${AWS_SECRET_ACCESS_KEY}'
   bucket: www.hobbithobby.com
   local-dir: build
   acl: public_read
