--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.2.0",
     "react-scripts-ts": "2.8.0",
     "react-spinkit": "^3.0.0",
-    "react-swipeable-views": "^0.12.12"
+    "react-swipeable-views": "^0.12.12",
+    "react-transition-group": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
