--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "private": true,
   "dependencies": {
     "@types/material-ui": "^0.20.0",
+    "lodash.range": "^3.2.0",
     "material-ui": "^0.20.0",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "react": "^16.2.0",
     "react-color": "^2.13.8",
     "react-dom": "^16.2.0",
+    "react-motion": "^0.5.2",
+    "react-router-dom": "^4.2.2",
+    "react-router-transition": "^1.2.0",
     "react-scripts-ts": "2.8.0",
     "react-spinkit": "^3.0.0",
+    "react-swipe": "^5.1.1",
     "react-swipeable-views": "^0.12.12",
     "react-transition-group": "^2.2.1"
   },
